jenkins.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: tpargmdiaz/s1_jenkins:latest
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: docker-sock-volume
              mountPath: "/var/run/docker.sock"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 200m
      volumes:
        # yamllint disable-line rule:line-length
        # This allows jenkins to use the docker daemon on the host, for running builds
        # yamllint disable-line rule:line-length
        # see https://stackoverflow.com/questions/27879713/is-it-ok-to-run-docker-from-inside-docker
        - name: docker-sock-volume
          hostPath:
            path: /var/run/docker.sock
        - name: jenkins-home
          hostPath:
            path: /mnt/jenkins-store
      serviceAccountName: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 8080
    - name: jnlp
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins
---
