ingress.yml
# from v1.14 of k8s
# apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.k8s.slot1.io
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 8080
